linked button fixed its spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -56,5 +56,4 @@ section{
 
 button {
   background: #00C399;
-  margin: 2rem auto;
 }
